k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-lab
  labels:
    app: devops-lab
spec:
  replicas: 2
  selector:
    matchLabels:
      app: devops-lab
  template:
    metadata:
      labels:
        app: devops-lab
    spec:
      containers:
       - name: app
         image: devops-lab:v1
         imagePullPolicy: Never
         ports:
           - containerPort: 5000
         resources:
           requests:
             memory: "64Mi"
             cpu: "50m"
         livenessProbe:
           httpGet:
             path: /health
             port: 5000
           initialDelaySeconds: 5
           periodSeconds: 10
         readinessProbe:
           httpGet:
             path: /health
             port: 5000
           initialDelaySeconds: 3
           periodSeconds: 5
