k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-lab-service
spec:
  type: NodePort
  selector:
    app: devops-lab
  ports:
   - port: 80
     targetPort: 5000
     nodePort: 30080
